data/all_generated_tests/raw_wast_tests/loop_StackCorruption_293.wast
;; - **Test 4**: Implement a loop where stack-based operations (like push/pop operations) occur alongside conditional branches (`br_if`). Insert invalid operations purposely to stress-test the error handling capability of the stack management, ensuring it remains intact.

(assert_invalid
  (module
    (func (result i32)
      (i32.const 0)
      (loop (result i32)
        (local.get 0)
        (i32.eqz)
        (br_if 0)
        (i32.const 1)
        (i32.add)
        (br 0)
      )
    )
  )
  "type mismatch"
)